// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Boosts slice tests should correctly handle mooFuse boost config 1`] = `
Object {
  "allIds": Array [
    "moo_fusefi-wfuse-usdc-fuse",
  ],
  "byChainId": Object {
    "fuse": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_fusefi-wfuse-usdc-fuse",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
  },
  "byId": Object {
    "moo_fusefi-wfuse-usdc-fuse": Object {
      "assets": Array [
        "USDC",
        "FUSE",
      ],
      "chainId": "fuse",
      "earnContractAddress": "0x405EE7F4f067604b787346bC22ACb66b06b15A4B",
      "earnedTokenId": "mooFuse",
      "id": "moo_fusefi-wfuse-usdc-fuse",
      "logo": undefined,
      "name": "Fuse",
      "partnerIds": Array [],
      "vaultId": "voltage-wfuse-usdc",
    },
  },
  "byVaultId": Object {
    "voltage-wfuse-usdc": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_fusefi-wfuse-usdc-fuse",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
  },
  "periodFinish": Object {},
}
`;

exports[`Boosts slice tests should correctly handle wfuse-elon boost config 1`] = `
Object {
  "allIds": Array [
    "moo_voltage-wfuse-elon-elon",
  ],
  "byChainId": Object {
    "fuse": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_voltage-wfuse-elon-elon",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
  },
  "byId": Object {
    "moo_voltage-wfuse-elon-elon": Object {
      "assets": Array [
        "ELON",
        "FUSE",
      ],
      "chainId": "fuse",
      "earnContractAddress": "0xc3a4fdcba79DB04b4C3e352b1C467B3Ba909D84A",
      "earnedTokenId": "voltage-wfuse-elon",
      "id": "moo_voltage-wfuse-elon-elon",
      "logo": undefined,
      "name": "Dogelon Mars x Fuse",
      "partnerIds": Array [],
      "vaultId": "voltage-wfuse-elon",
    },
  },
  "byVaultId": Object {
    "voltage-wfuse-elon": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_voltage-wfuse-elon-elon",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
  },
  "periodFinish": Object {},
}
`;

exports[`Boosts slice tests should update state on fulfilled boost contract data 1`] = `
Object {
  "allIds": Array [
    "moo_banana-banana-busd-bitcrush",
    "moo_banana-bnb-stars-mogul2",
  ],
  "byChainId": Object {
    "bsc": Object {
      "activeBoostsIds": Array [
        "moo_banana-bnb-stars-mogul2",
      ],
      "allBoostsIds": Array [
        "moo_banana-banana-busd-bitcrush",
        "moo_banana-bnb-stars-mogul2",
      ],
      "expiredBoostsIds": Array [
        "moo_banana-banana-busd-bitcrush",
      ],
      "prestakeBoostsIds": Array [],
    },
  },
  "byId": Object {
    "moo_banana-banana-busd-bitcrush": Object {
      "assets": undefined,
      "chainId": "bsc",
      "earnContractAddress": "0x20948Cad130c3D7B24d27CC66163b4aaed4684F0",
      "earnedTokenId": "mooPolygonBIFI",
      "id": "moo_banana-banana-busd-bitcrush",
      "logo": "single-assets/BTCB.svg",
      "name": "Iron / Garuda / Fanatics",
      "partnerIds": Array [],
      "vaultId": "aave-wbtc",
    },
    "moo_banana-bnb-stars-mogul2": Object {
      "assets": undefined,
      "chainId": "bsc",
      "earnContractAddress": "0x9B508ad657ed5A139D1a7c97fD84d7B7240849Cf",
      "earnedTokenId": "mooPolygonBIFI",
      "id": "moo_banana-bnb-stars-mogul2",
      "logo": "single-assets/ETH.svg",
      "name": "Iron / Garuda / Fanatics",
      "partnerIds": Array [],
      "vaultId": "aave-eth",
    },
  },
  "byVaultId": Object {
    "aave-eth": Object {
      "activeBoostsIds": Array [
        "moo_banana-bnb-stars-mogul2",
      ],
      "allBoostsIds": Array [
        "moo_banana-bnb-stars-mogul2",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
    "aave-wbtc": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_banana-banana-busd-bitcrush",
      ],
      "expiredBoostsIds": Array [
        "moo_banana-banana-busd-bitcrush",
      ],
      "prestakeBoostsIds": Array [],
    },
  },
  "periodFinish": "tested-below",
}
`;

exports[`Boosts slice tests should update state on fulfilled boost contract data 2`] = `
Array [
  Array [
    "moo_banana-banana-busd-bitcrush",
    "Sat, 01 Jan 2022 00:00:00 GMT",
  ],
  Array [
    "moo_banana-bnb-stars-mogul2",
    "Tue, 01 Jan 2250 00:00:00 GMT",
  ],
  Array [
    "moo_banana-crush-wbnb-bitcrush",
    null,
  ],
]
`;

exports[`Boosts slice tests should update state on fulfilled boosts list 1`] = `
Object {
  "allIds": Array [
    "moo_banana-pera",
    "moo_aave-btc",
    "moo_aave-eth",
  ],
  "byChainId": Object {
    "harmony": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_banana-pera",
        "moo_aave-btc",
        "moo_aave-eth",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
  },
  "byId": Object {
    "moo_aave-btc": Object {
      "assets": undefined,
      "chainId": "harmony",
      "earnContractAddress": "0x20948Cad130c3D7B24d27CC66163b4aaed4684F0",
      "earnedTokenId": "mooPolygonBIFI",
      "id": "moo_aave-btc",
      "logo": "single-assets/BTCB.svg",
      "name": "Iron / Garuda / Fanatics",
      "partnerIds": Array [],
      "vaultId": "aave-wbtc",
    },
    "moo_aave-eth": Object {
      "assets": undefined,
      "chainId": "harmony",
      "earnContractAddress": "0x9B508ad657ed5A139D1a7c97fD84d7B7240849Cf",
      "earnedTokenId": "mooPolygonBIFI",
      "id": "moo_aave-eth",
      "logo": "single-assets/ETH.svg",
      "name": "Iron / Garuda / Fanatics",
      "partnerIds": Array [],
      "vaultId": "aave-eth",
    },
    "moo_banana-pera": Object {
      "assets": undefined,
      "chainId": "harmony",
      "earnContractAddress": "0x38247fCE28480A7BEF2CB7aD134ce091Bd2E1a82",
      "earnedTokenId": "PERA",
      "id": "moo_banana-pera",
      "logo": "degens/BANANA.svg",
      "name": "Pera",
      "partnerIds": Array [
        "https://pera.finance/",
      ],
      "vaultId": "banana-banana-eol",
    },
  },
  "byVaultId": Object {
    "aave-eth": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_aave-eth",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
    "aave-wbtc": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_aave-btc",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
    "banana-banana-eol": Object {
      "activeBoostsIds": Array [],
      "allBoostsIds": Array [
        "moo_banana-pera",
      ],
      "expiredBoostsIds": Array [],
      "prestakeBoostsIds": Array [],
    },
  },
  "periodFinish": Object {},
}
`;
